# tckr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: release-to-gitlawb.sh
tckr/: __init__.py  __main__.py  _ansi.py  _http.py  alchemy.py  aliases.py  analytics.py  bankr.py  birdeye.py  cache.py  cboe.py  clanker.py  cli.py  coinalyze.py  coingecko.py  cryptonews.py  defillama.py  dexscreener.py  etherscan.py  finnhub.py  gdelt.py  geckoterminal.py  goplus.py  helius.py  history.py  honeypot.py  hyperliquid.py  jito.py  lp_lock.py  lunarcrush.py  messari.py  news.py  neynar.py  options.py  polymarket.py  pumpfun.py  pyth.py  quotes.py  registry.py  settings.py  (+6 more)
tckr/agent_toolkit/: __init__.py  core.py
tckr/agent_toolkit/adapters/: __init__.py  claude_sdk.py  langchain.py  mcp_stdio.py  openai.py
tests/: conftest.py  smoke.py  test_agent_toolkit.py  test_analytics.py  test_assetclass_routing.py  test_infra.py  test_keyless_smoke.py  test_polymarket_shape.py  test_registry.py  test_safety_verdicts.py
tests/coverage/: BLIND_SPOTS.md  keyless_coverage.py  matrix.md
tests/coverage/reports/: ANSEM.html  HYPE.html  MU.html
