[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tckr"
version = "0.2.3"
description = "Async, cached, gracefully-degrading aggregator over the major free crypto data APIs (DEX, perps, TVL, on-chain, social, launchpads, MEV) — plus an agent toolkit that exposes the data to any LLM platform via MCP, the Claude Agent SDK, OpenAI function calling, or LangChain."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "crypto", "defi", "dex", "perps", "tvl", "solana", "base", "ethereum",
    "hyperliquid", "geckoterminal", "dexscreener", "defillama", "coinalyze",
    "agent", "mcp", "llm", "claude", "openai", "langchain",
]
authors = [
    { name = "tckr contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "solders>=0.21",
    "eth-abi>=5.0",
    "eth-hash[pycryptodome]>=0.7",
]

[project.optional-dependencies]
# Each adapter is opt-in. Install only what your agent platform needs.
agent-claude    = ["claude-agent-sdk>=0.1"]
agent-mcp       = ["mcp>=1.0"]
agent-openai    = ["openai>=1.40"]
agent-langchain = ["langchain-core>=0.3"]
# Convenience meta-extras:
agent      = ["tckr[agent-claude,agent-mcp]"]
agent-all  = ["tckr[agent-claude,agent-mcp,agent-openai,agent-langchain]"]
# Development:
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "build>=1.2",
]

[project.scripts]
tckr     = "tckr.cli:main"
# Universal MCP stdio server — spawn from any MCP-compatible client (Claude
# Code, Cline, Continue.dev, OpenAI Agents, custom orchestrators…).
# Requires `tckr[agent-mcp]`.
tckr-mcp = "tckr.agent_toolkit.adapters.mcp_stdio:main"

[project.urls]
Homepage      = "https://github.com/tckr-org/tckr"
Repository    = "https://github.com/tckr-org/tckr"
Issues        = "https://github.com/tckr-org/tckr/issues"
Changelog     = "https://github.com/tckr-org/tckr/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["tckr*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "needs_keys: test requires API keys in the environment",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pragmatic default — surface clear bugs without being aesthetically opinionated.
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function-call default args (httpx uses them)
    "E701",  # single-line `if x: y = z` is a deliberate terse idiom in this codebase
    "UP031", # %-format in GraphQL query bodies stays readable; f-strings collide with {...}
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]  # bare expressions in tests are fine (asserts)
